--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,16 +12,30 @@ body {
 main {
     margin: auto;
     max-width: 1024px;
+    padding: 0 20px;
+
+    @media screen and (min-width:1025px) {
+        padding: 0;
+    }
+}
+
+.container {
+    @media screen and (max-width:1023px) {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .title {
-    text-align: center;
+    font-size: 2.5rem;
     margin: 2rem 0;
+    text-align: center;
 }
 
 .subtitle {
-    text-align: center;
+    font-size: 2rem;
     margin-bottom: 2rem;
+    text-align: center;
 }
 
 .card {
